--- a/igm/ui/static/css/filebrowser.css
+++ b/igm/ui/static/css/filebrowser.css
@@ -16,16 +16,24 @@
 }
 
 .fb_l_dir, .fb_l_file {
-    display: block;
+    display: block-inline;
     width: 100%;
     height: 100%;
+    word-break: break-all;
+}
+
+.fb_icon {
+    width: 1.6em;
+    display: inline-block;
+    text-align: center;
+    margin-right:1em;
 }
 
 .fb_c_dir:hover, .fb_c_file:hover {
     background-color: #eeeeee;
 }
 
-.fb_c_dir:before {
+/*.fb_c_dir:before {
     content: "\F07B";
     font-family: FontAwesome;
     left:-25px;
@@ -40,7 +48,7 @@
     position:absolute;
     top:0;
     color: 'darkgreen';
-}
+}*/
 
 
 .fb_l_dir {
@@ -55,7 +63,7 @@
 
 .fb_l_file {
     color: 'darkgreen';
-} 
+}
 
 #fb_u_dirs, #fb_u_files {
     list-style: none;
