--- a/igm/ui/templates/main.html
+++ b/igm/ui/templates/main.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="row" style="height: 100%; min-height: 100vh;" id="central-content">
-        <div id="folder-navigator" class="col">
+        <div id="folder-navigator" class="col col-md-4">
           <h3>IGM folders</h3> <small><a href="javascript:updateFolders();"> (reload) </a></small>
           <div id="igm-folders-div table-responsive">
             <table class="table">
