--- a/igm/ui/templates/main.html
+++ b/igm/ui/templates/main.html
@@ -155,7 +155,7 @@
 
             <!-- LOG -->
             <div class="tab-pane fade" id="log" role="tabpanel" aria-labelledby="log-tab">
-              <textarea id="log-ta" rows="25" cols="80" readonly></textarea>
+              <div id="log-ta"></div>
             </div>
 
 
