--- a/igm/ui/templates/main.html
+++ b/igm/ui/templates/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-
+<link rel="shortcut icon" type="image/x-icon" href="{{ static_url("favicon.ico") }}"/>
 <link rel="stylesheet" type="text/css" href="{{ static_url("css/igm-edit-config.css") }}">
 <link rel="stylesheet" type="text/css" href="{{ static_url("css/main.css") }}">
 <script type="text/javascript">
@@ -65,8 +65,8 @@
     <div class="row" style="height: 100%; min-height: 100vh;" id="central-content">
         <div id="folder-navigator" class="col col-md-4">
           <h3>IGM folders</h3> <small><a href="javascript:updateFolders();"> (reload) </a></small>
-          <div id="igm-folders-div table-responsive">
-            <table class="table">
+          <div id="igm-folders-div">
+            <table class="table table-responsive">
               <thead id="igm-folders-thead"></thead>
               <tbody id="igm-folders-tbody"></tbody>
             </table>
